tests/ui/fail/log_interpolated_unsatisfied_trait_debug.stderr
error[E0277]: `Input` doesn't implement `Debug`
   --> fail/log_interpolated_unsatisfied_trait_debug.rs:7:32
    |
7   |     emit::info!("Text \"and\" {#[emit::as_debug] a: Input} and more");
    |                                ^^^^^^^^^^^^^^^^^^^^^^^^^^ `Input` cannot be formatted using `{:?}`
    |
    = help: the trait `Debug` is not implemented for `Input`
    = note: add `#[derive(Debug)]` to `Input` or manually `impl Debug for Input`
    = note: required because of the requirements on the impl of `main::emit::emit_rt::capture::Capture<main::emit::emit_rt::capture::CaptureAnonDebug>` for `Input`
note: required by a bound in `__private_capture_anon_as_debug`
   --> $WORKSPACE/rt/src/capture.rs
    |
    |         Self: Capture<CaptureAnonDebug>,
    |               ^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `__private_capture_anon_as_debug`
    = note: this error originates in the macro `emit::ct::__private_capture_anon_as_debug` (in Nightly builds, run with -Z macro-backtrace for more info)
